@@ -1,4 +1,5 @@
 * Bug Fix: Fix asset precompilation issue for `datetime_picker_rails` gem.
+* Improvement: Add a generator for copying field views to host application
 * Improvement: Add a generator for creating custom field types
 * Improvement: Add generators for copying view templates into host application
 * UI: Give form and show pages more consistent label styles
